fixed vertical aligning for search

--- a/public/css/player.css
+++ b/public/css/player.css
@@ -33,3 +33,8 @@ textarea {
 	/*height:100%;
     border:1px solid black;*/
 }
+
+#dropdownMenu1 {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
